syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.alibaba.tailbase.proto";
option java_outer_classname = "ServerProto";
option objc_class_prefix = "HLW";

package server;

service BackendService {
  rpc setWrongTraceId (setWrongTraceIdRequest) returns (setWrongTraceIdReply) {}

  rpc sendWrongTracing (sendWrongTracingRequest) returns (sendWrongTracingReply) {}
}

message setWrongTraceIdRequest {
  string traceIdListJson = 1;
  int32 batchPos = 2;
}

message setWrongTraceIdReply {
  string message = 1;
}

message sendWrongTracingRequest {
  string wrongTraceMap = 1;
  string batchPos = 2;
}

message sendWrongTracingReply {
  string message = 1;
}